force-app/main/default/objects/Chainable_Link_Execution__c/Chainable_Link_Execution__c.object-meta.xml
<CustomObject>
    <label>Chainable Link Execution</label>
    <nameField>
        <displayFormat>CLE-{0000}</displayFormat>
        <label>Chainable Link Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chainable Link Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>