force-app/main/default/objects/Chainable_Link_Execution__c/fields/Chainable_Link__c.field-meta.xml
<CustomField>
    <fullName>Chainable_Link__c</fullName>
    <label>Chainable Link</label>
    <referenceTo>Chainable_Link__c</referenceTo>
    <relationshipLabel>Chainable Link Runs</relationshipLabel>
    <relationshipName>Chainable_Link_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>