force-app/main/default/objects/Chainable_Link_Execution__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>The SF job id in which this execution took place</description>
    <inlineHelpText>The SF job id in which this execution took place</inlineHelpText>
    <label>Job Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>